metadata/force-app/main/default/objects/CustomName_ANRkf__c/CustomName_ANRkf__c.object-meta.xml
<CustomObject>
    <description>Description_FVMQU</description>
    <label>CustomLabel_QdArV</label>
    <nameField>
        <label>CustomLabel_QdArV</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_QdArVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>