metadata/force-app/main/default/objects/CustomName_ANRkf__c/fields/CustomField_lnWBl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lnWBl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldSZdZI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>