metadata/force-app/main/default/objects/CustomName_ANRkf__c/fields/CustomField_lrUBb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lrUBb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeMncg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>